// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly render expenses summary for a multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $233,123.25
  </h1>
</div>
`;

exports[`correctly render expenses summary for a single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
